# auto-tube

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION_STATUS.md  Makefile  PROJECT_DESIGN.md  README.md  TEST_RESULTS.md  USAGE_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt  test_basic.py  test_comprehensive.py
.github/workflows/: ci.yaml  ci.yml
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: projects.py  render.py  routes.py
backend/app/core/: settings.py
backend/app/services/: project_repository.py  projects_store.py  script_generator.py  storyboard_generator.py
backend/app/services/tts/: elevenlabs.py  factory.py  provider.py  types.py  usecase.py
backend/prisma/: schema.prisma
backend/tests/: conftest.py  test_health.py
backend/tests/api/: test_projects.py  test_projects_tts.py
backend/tests/services/: test_elevenlabs.py
docs/: phase0-tech-decisions.md  product-roadmap.md
docs/infra/: planetscale-video-plan.md
docs/issues/: issue-001-script-generation.md  issue-002-tts.md  issue-003-history.md  issue-004-ci.md  issue-005-storyboard.md
docs/pr/: issue-001.md  issue-002.md  issue-003.md  issue-004.md  issue-005-storyboard.md  issue-006-infra.md
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/components/: Dashboard.tsx  LoginForm.tsx
frontend/src/pages/: index.tsx
frontend/src/services/: apollo-client.ts  projects.test.ts  projects.ts
frontend/src/types/: project.ts  storyboard.ts
scripts/: init_db.py
src/: main.py
src/analytics/: analyzer.py
src/analyzers/: trend_analyzer.py
src/api/: main.py
src/collectors/: news_collector.py
src/core/: config.py  database.py  logging.py
src/generators/: script_generator.py
src/pipeline/: orchestrator.py
src/quality/: checker.py
src/scheduler/: celery_app.py  tasks.py
src/seo/: optimizer.py
src/thumbnail/: generator.py
src/uploader/: youtube_uploader.py
src/utils/: helpers.py
src/video/: editor.py  visual_assets.py
src/voice/: tts_generator.py
